--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-class-component": "^8.0.0-0"
   },
   "devDependencies": {
+    "@floating-ui/vue": "^1.1.6",
     "@types/jest": "^27.0.1",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
